Q3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb
spec:
  type: LoadBalancer
  ports:
  - port: 8080 
    protocol: TCP
    targetPort: 8080
  selector:
    app: nginx
