Q3/service3.yaml
apiVersion: v1
kind: Service
metadata:
  name: ClusterIP
spec:
  type: NodePort
  ports:
  - port: 8080 
    protocol: TCP
    targetPort: 8080
  selector:
    app: nginx
